--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 bottle-websocket==0.2.9
 cffi==1.14.5
 dnspython==2.1.0
-Eel==0.14.0
+eel==0.14.0
 future==0.18.2
 gevent==21.1.2
 gevent-websocket==0.10.1
